bk_ida/gccida/c3/expand_mult_highpart
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3237:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3254:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3258:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 *v23; // rcx 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3262:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 *v27; // rcx 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3276:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v41; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3280:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3283:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3300:41: error: use of undeclared identifier 'machine_mode'
v13 = immed_double_const( cnst1, v12, ( machine_mode)v10); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3304:51: error: subscripted value is not an array, pointer, or vector
&& mul_cost[( unsigned int)v10] + *(int *)0x98449C[v7] < max_cost ) 
                                          ~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3306:26: error: use of undeclared identifier 'machine_mode'
v16 = convert_to_mode( ( machine_mode)v10, op0, unsignedp); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3307:22: error: use of undeclared identifier 'machine_mode'
v17 = expand_mult( ( machine_mode)v10, v16, v13, 0LL, 0); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3309:36: error: use of undeclared identifier 'machine_mode'
v19 = expand_shift( RSHIFT_EXPR, ( machine_mode)v10, v17, v18, 0LL, 1); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3310:31: error: use of undeclared identifier 'machine_mode'
return convert_modes( mode, ( machine_mode)v10, v19, unsignedp); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3341:48: error: subscripted value is not an array, pointer, or vector
|| mul_highpart_cost[v6] + 2 * *(int *)0x98449C[v14] + 4 * add_cost >= max_cost ) 
                                       ~~~~~~~~^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3392:36: error: use of undeclared identifier 'machine_mode'
v46 = expand_shift( RSHIFT_EXPR, ( machine_mode)oldmode, v44, v45, 0LL, 1); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3393:30: error: use of undeclared identifier 'machine_mode'
v47 = convert_modes( mode, ( machine_mode)oldmode, v46, v42); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3405:23: error: use of undeclared identifier 'machine_mode'
v36 = expand_binop( ( machine_mode)v30, v32, op0, v57, 0LL, v35, OPTAB_WIDEN); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3409:17: error: invalid suffix 'xmode' on integer constant
if ( *(short *)0xmode == mode ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/expmed.c:3412:36: error: use of undeclared identifier 'machine_mode'
v49 = expand_shift( RSHIFT_EXPR, ( machine_mode)oldmode, v37, v48, 0LL, 1); 
                                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_mult_highpart/src/obj/expmed.o] Error 1
